====================
Bazaar Release Notes
====================

.. contents::

IN DEVELOPMENT
==============

  IMPROVEMENTS:

   * ``bzr commit`` now doesn't print the revision number twice. (Matt
     Nordhoff, #172612)

   * Support logging single merge revisions with short and line log formatters.
     (Kent Gibson)

  INTERNALS:

    * New -Dhttp debug option reports http connections, requests and responses.
      (Vincent Ladeuil)

  BUGFIXES:

   * Catch OSError 17 (file exists) in final phase of tree transform and show
     filename to user.
     (Alexander Belchenko, #111758)

   * Catch ShortReadvErrors while using pycurl. Also make readv more robust by
     allowing multiple GET requests to be issued if too many ranges are
     required.
     (Vincent Ladeuil, #172701)

   * Check for missing basis texts when fetching from packs to packs.
     (John Arbash Meinel, #165290)

  API BREAKS:

   * Deprecate not passing a ``location`` argument to commit reporters'
     ``started`` methods. (Matt Nordhoff)


bzr 1.0rc1 2007-11-30
=====================

  NOTES WHEN UPGRADING:

   * The default repository format is now ``pack-0.92``.  This 
     default is used when creating new repositories with ``init`` and 
     ``init-repo``, and when branching over bzr+ssh or bzr+hpss. 
     (See https://bugs.launchpad.net/bugs/164626)

     This format can be read and written by Bazaar 0.92 and later, and 
     data can be transferred to and from older formats.

     To upgrade, please reconcile your repository (``bzr reconcile``), and then
     upgrade (``bzr upgrade``). 
     
     ``pack-0.92`` offers substantially better scaling and performance than the
     previous knits format. Some operations are slower where the code already
     had bad scaling characteristics under knits, the pack format makes such
     operations more visible as part of being more scalable overall. We will
     correct such operations over the coming releases and encourage the filing